--- a/style.css
+++ b/style.css
@@ -8152,6 +8152,7 @@ body a {
         width: 30px;
         height: 30px;
         cursor: pointer;
+        border-radius: 50%;
     }
 
     .ph {
