--- a/style.css
+++ b/style.css
@@ -93,6 +93,32 @@ body a {
         height: 30px;
         cursor: pointer;
     }
+    .account-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip {
+    position: absolute;
+    top: 35px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: black;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 4px;
+    font-size: 12px;
+    white-space: nowrap;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s;
+    z-index: 1000;
+}
+
+.account-wrapper:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+}
 
     .ph {
         width: 20px;
